--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -168,20 +168,84 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909040948326_InitialModel.cs" />
+    <Compile Include="Migrations\201909040948326_InitialModel.Designer.cs">
+      <DependentUpon>201909040948326_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909041320539_InitialModel1.cs" />
+    <Compile Include="Migrations\201909041320539_InitialModel1.Designer.cs">
+      <DependentUpon>201909041320539_InitialModel1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909041336190_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201909041336190_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201909041336190_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909041359368_AddMembershipType.cs" />
+    <Compile Include="Migrations\201909041359368_AddMembershipType.Designer.cs">
+      <DependentUpon>201909041359368_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909041402072_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201909041402072_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201909041402072_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909041857263_ApplyDataAnnotationToCustomers.cs" />
+    <Compile Include="Migrations\201909041857263_ApplyDataAnnotationToCustomers.Designer.cs">
+      <DependentUpon>201909041857263_ApplyDataAnnotationToCustomers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909041933341_AddMembershipTypeName.cs" />
+    <Compile Include="Migrations\201909041933341_AddMembershipTypeName.Designer.cs">
+      <DependentUpon>201909041933341_AddMembershipTypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909041934286_UpdateMembershipDetails.cs" />
+    <Compile Include="Migrations\201909041934286_UpdateMembershipDetails.Designer.cs">
+      <DependentUpon>201909041934286_UpdateMembershipDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909041947396_AddBdayToCustomers.cs" />
+    <Compile Include="Migrations\201909041947396_AddBdayToCustomers.Designer.cs">
+      <DependentUpon>201909041947396_AddBdayToCustomers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909061400015_UpdateandModification.cs" />
+    <Compile Include="Migrations\201909061400015_UpdateandModification.Designer.cs">
+      <DependentUpon>201909061400015_UpdateandModification.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909091504302_Genre.cs" />
+    <Compile Include="Migrations\201909091504302_Genre.Designer.cs">
+      <DependentUpon>201909091504302_Genre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909101003170_addedGenre.cs" />
+    <Compile Include="Migrations\201909101003170_addedGenre.Designer.cs">
+      <DependentUpon>201909101003170_addedGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909111413163_AddNewMovie.cs" />
+    <Compile Include="Migrations\201909111413163_AddNewMovie.Designer.cs">
+      <DependentUpon>201909111413163_AddNewMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
+    <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\bootstrap_lumen.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -234,6 +298,13 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -245,6 +316,47 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201909040948326_InitialModel.resx">
+      <DependentUpon>201909040948326_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909041320539_InitialModel1.resx">
+      <DependentUpon>201909041320539_InitialModel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909041336190_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201909041336190_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909041359368_AddMembershipType.resx">
+      <DependentUpon>201909041359368_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909041402072_PopulateMembershipTypes.resx">
+      <DependentUpon>201909041402072_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909041857263_ApplyDataAnnotationToCustomers.resx">
+      <DependentUpon>201909041857263_ApplyDataAnnotationToCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909041933341_AddMembershipTypeName.resx">
+      <DependentUpon>201909041933341_AddMembershipTypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909041934286_UpdateMembershipDetails.resx">
+      <DependentUpon>201909041934286_UpdateMembershipDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909041947396_AddBdayToCustomers.resx">
+      <DependentUpon>201909041947396_AddBdayToCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909061400015_UpdateandModification.resx">
+      <DependentUpon>201909061400015_UpdateandModification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909091504302_Genre.resx">
+      <DependentUpon>201909091504302_Genre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909101003170_addedGenre.resx">
+      <DependentUpon>201909101003170_addedGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909111413163_AddNewMovie.resx">
+      <DependentUpon>201909111413163_AddNewMovie.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
