Add Roles, Seed Users, Build Movie API

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -187,12 +187,15 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
+    <Compile Include="Controllers\Api\MoviesController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Dtos\CustomerDto.cs" />
+    <Compile Include="Dtos\GenreDto.cs" />
     <Compile Include="Dtos\MembershipTypeDto.cs" />
+    <Compile Include="Dtos\MovieDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -247,6 +250,10 @@
     <Compile Include="Migrations\201909111413163_AddNewMovie.cs" />
     <Compile Include="Migrations\201909111413163_AddNewMovie.Designer.cs">
       <DependentUpon>201909111413163_AddNewMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909291255580_SeedUsers.cs" />
+    <Compile Include="Migrations\201909291255580_SeedUsers.Designer.cs">
+      <DependentUpon>201909291255580_SeedUsers.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -552,6 +559,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909111413163_AddNewMovie.resx">
       <DependentUpon>201909111413163_AddNewMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909291255580_SeedUsers.resx">
+      <DependentUpon>201909291255580_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
