Restrict Access, Add Driving License to Register Model

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -255,6 +255,10 @@
     <Compile Include="Migrations\201909291255580_SeedUsers.Designer.cs">
       <DependentUpon>201909291255580_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909302132393_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201909302132393_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201909302132393_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -264,6 +268,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\MovieFormViewModel.cs" />
@@ -503,11 +508,12 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnly.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -562,6 +568,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909291255580_SeedUsers.resx">
       <DependentUpon>201909291255580_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909302132393_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201909302132393_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
